changing to virtual threads scenario5